# trivial-meson-vala-build

./: authors  changelog  meson.build  readme.md
data/: com.github.darkoverlordofdata.trivial.appdata.xml  com.github.darkoverlordofdata.trivial.desktop  com.github.darkoverlordofdata.trivial.gresource.xml  com.github.darkoverlordofdata.trivial.gschema.xml  gears-menu.ui  meson.build  prefs.ui
meson/: post_install.py
src/: application-preferences.vala  application-window.vala  application.vala  constants.vala  main.vala
