
install_data(
    join_paths(meson.project_name() + '.png'),
    install_dir: join_paths(get_option('datadir'), 'icons')
)

install_data(
    meson.project_name() + '.gschema.xml',
    install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas')
)

install_data(
    meson.project_name() + '.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications')
)

